// This file is made available under Elastic License 2.0
// This file is based on code available under the Apache license here:
//   https://github.com/apache/incubator-doris/blob/master/gensrc/proto/olap_common.proto

// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.
// Define common messages shared by other proto files.

syntax="proto2";

package starrocks;
option java_package = "com.starrocks.proto";

message ColumnMessage {
    required string name = 1;   // ColumnPB.name
    required string type = 2;   // ColumnPB.type
    required string aggregation = 3;    // ColumnPB.aggregation
    required uint32 length = 4; // ColumnPB.length
    required bool is_key = 5;   // ColumnPB.is_key
    optional string default_value = 6;  // ColumnPB.default_value
    optional string referenced_column = 7;  // ColumnPB.
    optional uint32 index_length = 8;   // ColumnPB.index_length
    optional uint32 precision = 9 [default = 27];   // ColumnPB.precision
    optional uint32 frac = 10 [default = 9];    // ColumnPB.frac
    optional bool is_allow_null = 11 [default=false];   // ColumnPB.is_nullable
    optional uint32 unique_id = 12; // ColumnPB.unique_id
    repeated uint32 sub_column = 13;    // not used
    optional bool is_root_column = 14 [default=false]; // not used
    // is bloom filter column
    optional bool is_bf_column = 15 [default=false];    // ColumnPB.is_bf_column
    // is bitmap index column
    optional bool has_bitmap_index = 16 [default=false]; // ColumnPB.has_bitmap_index
}

// Please keep the defined value less than 256, because the enum will be casted to uint8_t in some
// cases.
enum CompressKind {
    COMPRESS_NONE = 0;
    COMPRESS_LZO = 1;
    COMPRESS_LZ4 = 2;
}

// An internal version for primary key tablet
// Each commit will increase this version
//   FE's publish will increase major by 1
//   internal compaction will increase minor by 1
message EditVersionPB {
    optional int64 major = 1;
    optional int64 minor = 2;
}

// page position info for segment file and persistent index file
message PagePointerPB {
    required uint64 offset = 1; // offset in segment file
    required uint32 size = 2; // size of page in byte
}

